<resources>
    <string name="app_name">Pyxis</string>

    <string name="radioStationNameText">Radio Station</string>
    <string name="songNameText">Song Name</string>
    <string name="artistNameText">Artist Name</string>
    <string name="progressTimeText">0:00</string>
    <string name="endTimeText">-0:00</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="username_key">key</string>
    <string name="password_key">key</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="image_used_for_menu_button">Image used for menu button</string>
    <string name="favorite_radio_station_button">Favorite radio station button</string>
    <string name="image_of_album_cover_of_current_song">Image of album cover of current song</string>
    <string name="thumbs_up_current_song">Thumbs up current song</string>
    <string name="pause_or_play_current_song">Pause or play current song</string>
    <string name="skip_song">Skip song</string>

    <string name="credentials_label">Credentials</string>
    <string name="pandora_credentials_label">Enter Your Credentials</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="about">About text that needs to be added</string>
    <string name="username_key">username</string>
    <string name="password_key">password</string>
    <string name="verifying_credentials">Verifying Credentials...</string>
    <string name="invalid_credentials">InvalidCredentials</string>
    <string name="general_error">A non-rpc error has occurred. Maybe bad url or io issue :-(</string>
    <string name="please_wait">Please wait...</string>
    <string name="retrieving_stations">"Retrieving Stations..."</string>
    <string name="retrieve_stations_error">Cannot retrieve stations</string>
    <string name="wifi_only_error">Wifi only mode is set. You are not on wifi</string>
    <string name="wifi_only_key">wifi_only</string>
</resources>
