<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <ImageButton
            android:id="@+id/menuImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/colorPrimaryDark"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/radioStationNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/radioStationNameText"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="32dp" />

        <ImageButton
            android:id="@+id/favoriteStationImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimaryDark"
            app:srcCompat="@android:drawable/btn_star_big_off" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topMenuLayout"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="48dp">

        <ImageView
            android:id="@+id/albumCoverImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/ic_menu_report_image" />

        <TextView
            android:id="@+id/songNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/songNameText"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/artistNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/artistNameText"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/progressTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:text="@string/progressTimeText"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="10sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/endTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="7dp"
                android:text="@string/endTimeText"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/controlButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/favoriteSongImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                app:srcCompat="@android:drawable/star_off" />

            <ImageButton
                android:id="@+id/playPauseImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                app:srcCompat="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/nextSongImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                app:srcCompat="@android:drawable/ic_media_next" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>